# POO-Object-Oriented-Programming

./: README.md
Examen practic/: ajutor.txt  ajutorui.txt  practic restanta.rtf  practic_restanta.docx  testajutor.txt
Examen practic/Practic/exersare 10 POO/: exceptii.cpp  exersare 10 POO.sln  exersare 10 POO.vcxproj  exersare 10 POO.vcxproj.filters  main.cpp  melodii.cpp  melodii.h  melodii.txt  repofile.cpp  repofile.h  service.cpp  service.h  test.txt  teste.cpp  teste.h  ui.cpp  ui.h  validator.cpp  (+1 more)
Examen practic/colocviu/: colocviu.cpp  colocviu.sln  colocviu.vcxproj  colocviu.vcxproj.filters
Examen scris/: (d)Subject 1.docx  (d)Subject 2.docx  (d)Subject 3.docx  (d)Subject 4.docx  Exercitii scris.cpp  copiuta.docx  quizz.txt
Laborator/Altele IR/: lab1_problem1.txt
Laborator/Lab 2023 MIR/111-iteratia 2/: 111-iteratia 2.cpp  111-iteratia 2.vcxproj  111-iteratia 2.vcxproj.filters  CMakeLists.txt  Repo.cpp  Repo.h  RepoTemplate.h  Service.cpp  Service.h  Student.cpp  Student.h  Teste.cpp  Teste.h  UI.cpp  UI.h  studenti.txt
Laborator/Lab 2023 MIR/Lab9_10/: CMakeLists.txt  app.cpp
Laborator/Lab 2023 MIR/Lab9_10/Domain/: InvalidCodeException.h  Money.cpp  Money.h  NotFoundElementException.h  Product.h
Laborator/Lab 2023 MIR/Lab9_10/Repository/: Repo.h  RepoFile.cpp
Laborator/Lab 2023 MIR/Lab9_10/Service/: Service.cpp
Laborator/Lab 2023 MIR/Lab9_10/Tests/: Tests.h
Laborator/Lab 5-14/: CMakeLists.txt
Laborator/Produse/: RepoException.h  RepoFile.cpp  RepoFile.h  ValidationException.h  ValidatorProdus.cpp  ValidatorProdus.h  aaaaa.cpp  aaaaa.sln  aaaaa.vcxproj  aaaaa.vcxproj.filters  produs.cpp  produs.h  repo.cpp  repo.h  service.cpp  service.h  testProduse.txt  teste.cpp  teste.h  testerepo.cpp  testerepo.h  testerepofile.cpp  testerepofile.h  testeservice.cpp  testeservice.h  ui.cpp  ui.h  util.cpp  util.h
Laborator/bonus/: bonus.sln
MemoryErrors/MemoryError2/: main.cpp
MemoryErrors/MemoryError5/: MemoryError5.vcxproj.xml  main.cpp
Seminar/: lab2.txt  seminar1.cpp  seminar1p2.cpp  seminar1problem.txt  seminar2.txt
Seminar/Seminar1/: Seminar1.sln
Seminar/Seminar1pb7/: Seminar1pb7.sln
Seminar/Seminar2POOStudent/: Seminar2POOStudent.cpp  Seminar2POOStudent.sln  Seminar2POOStudent.vcxproj  Seminar2POOStudent.vcxproj.filters  operations.cpp  operations.h  repo.cpp  repo.h  student.cpp  student.h  teste.cpp  teste.h
Seminar/Seminar4_311/: CMakeLists.txt  RepoFile.cpp  RepoFile.h  Student.cpp  Student.h  Studenti.txt  main.cpp
Seminar/Seminar5_311/: CMakeLists.txt  DestinatiaTuristica.cpp  DestinatiaTuristica.h  Tara.cpp  Tara.h  main.cpp
Seminar/Seminar_1/: Seminar_1.sln
Seminar/seminar 3/: Repo.cpp  Repo.h  Service.cpp  Service.h  Student.cpp  Student.h  UI.cpp  UI.h  main.cpp
Seminar/seminar 6/: CMakeLists.txt  main.cpp
Seminar/seminar6_311/: CMakeLists.txt  Fruit.cpp  Fruit.h  Melon.cpp  Melon.h  MelonLike.cpp  MelonLike.h  MyException.cpp  MyException.h  Watermelon.cpp  Watermelon.h  main.cpp
(+875 files in other folders)
